# mackerel-plugin-dice

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs
